feat(gc-log): add gc-log JFC preset, condenser config, classpath fallback, and docs
- Add src/main/resources/META-INF/jfr/gc-log.jfc: 91-event JFR config matching
  benchmark/gc.jfc "normal" mode; includes all GC phases, collector-specific events
  (G1, ZGC, Shenandoah, Parallel), and ambient context (CPULoad, container metrics,
  JVM flags, native memory, physical memory, OS info)
- Add Configuration.GC_LOG condenser preset (lossless + GCPhaseParallel aggregation +
  memoryAsBFloat16 + removeUnnecessaryAddresses + ignoreZeroSizedTenuredAges)
- Add classpath fallback in RecordingThread.loadJfrConfiguration() so config=gc-log
  resolves META-INF/jfr/gc-log.jfc before falling back to JDK getConfiguration()
- Add GcLogPresetIntegrationTest (5 tests: preset exists, JFC loads, events enabled,
  RecordingStream starts, condenser round-trip)
- Add LoadJfrConfigurationTest tests for gc-log classpath loading by name and with .jfc suffix
- Add GC-Log Replacement Mode section to docs/production-recording.md